--- a/assets/style.css
+++ b/assets/style.css
@@ -58,8 +58,10 @@ body {
 
 #seat-grid {
     position: relative;
-    width: 900px; /* Adjust based on the grid dimensions */
-    height: 1500px; /* Adjust based on the grid dimensions */
+    width: 770px; /* Adjust based on the grid dimensions */
+    height: 450px; /* Adjust based on the grid dimensions */
+    margin: 10px;
+    float: left;
 }
 
 .box {
@@ -68,6 +70,9 @@ body {
     height: 30px; !* Match boxSize *!*/
     border: 1px solid #ddd; /* Optional */
     box-sizing: border-box; /* Important for consistent resizing */
+    padding-top: 5px;
+    font-size: 12px;
+    color: #ffffff;
 }
 
 .box.circle {
